--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -59,6 +59,40 @@ li:hover{
     background-color: grey;
 }
 
+#playerHand{
+    position: relative;
+    background-color: pink;
+    top: 630px;
+    left: 180px;
+    width: 600px;
+    height: 90px;
+    border: 5px solid black;
+    z-index: 20;
+    list-style: none;
+}
+
+#playerHand:hover{
+    background-color: grey;
+}
+
+#diceTray{
+    position: relative;
+    background-color: purple;
+    top: 200px;
+    left: 750px;
+    width: 150px;
+    height: 120px;
+    border: 5px solid black;
+    z-index: 20;
+    list-style: none;
+}
+
+#diceTray:hover{
+    background-color: grey;
+}
+
+
+
 
 
 
