--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -1,24 +1,33 @@
-
-
-ul{
-    background-color: red;
-    display: flex;
-    flex-wrap: wrap;
-    width: 900px;
-    height: 500px;
+#boardOne{
+    height: 550px;
     position: relative;
     border: 5px solid black;
+    background-color: red;
+    width: 970px;
+    background-image: url("/WrestlingCardGame/images/MainEventPlaymatt.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.zones{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 10px;
+    width: 900px;
+    height: 500px;
+    position: absolute;
+    border: 5px solid ;
     list-style-type: none;
 }
 
 .zone{
     position: relative; left: 180px;
-    margin-top: 60px;
+    margin-top: 40px;
     margin-left: 5px;
-    background-color: white;
+    background-color: transparent;
     width: 150px;
     height: 300px;
-    border: 5px solid black;
+    border: 5px solid yellow;
     
 }
 
@@ -27,68 +36,73 @@ li:hover{
 }
 
 
-#playerDeck{
-    position: relative;
-    background-color: orange;
-    top: 470px;
+.deck{
+    position: absolute;
+    background-image: url("/WrestlingCardGame/images/c54f7956_1.png");
+    background-position: center;
+    background-size: cover;
+    top: 150px;
     left: 20px;
-    width: 90px;
+    width: 70px;
     height: 90px;
     border: 5px solid black;
     z-index: 20;
     list-style: none;
 }
 
-#playerDiscard{
-    position: relative;
-    background-color: white;
-    top: 500px;
+.discard{
+    position: absolute;
+    background-color: transparent;
+    top: 320px;
     left: 20px;
-    width: 90px;
+    width: 70px;
     height: 90px;
     border: 5px solid black;
     z-index: 10;
     list-style: none;
 }
 
-#playerDiscard:hover{
+.discard:hover{
    background-color: grey;
 }
 
-#playerDeck:hover{
-    background-color: grey;
-}
 
-#playerHand{
-    position: relative;
-    background-color: pink;
-    top: 630px;
+
+.hand{
+    position: absolute;
+    display: flex;
+    gap: 10px;
+    background-color: grey;
+    top: 400px;
     left: 180px;
     width: 600px;
     height: 90px;
     border: 5px solid black;
     z-index: 20;
     list-style: none;
+
 }
 
-#playerHand:hover{
-    background-color: grey;
-}
 
-#diceTray{
-    position: relative;
-    background-color: purple;
-    top: 200px;
+
+.diceTray{
+    position: absolute;
+    background-color: transparent;
+    top: 100px;
     left: 750px;
     width: 150px;
-    height: 120px;
+    height: 200px;
     border: 5px solid black;
     z-index: 20;
     list-style: none;
+    background-image: url("/WrestlingCardGame/images/deckArt/00-Theo-the-Greek-Neo-1.webp");
+    background-position: center;
+    background-size: cover;
 }
 
-#diceTray:hover{
+.diceTray:hover{
     background-color: grey;
+    
 }
 
 
