--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -1,4 +1,5 @@
 #boardOne{
+  
     height: 550px;
     position: relative;
     border: 5px solid black;
@@ -115,6 +116,106 @@
     background-color: grey;
     
 }
+
+.top-container{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#invalidMove{
+    display: none;
+
+}
+
+#notCurrentPlayer{
+    display: none;
+
+}
+
+#winner{
+    display: none;
+
+}
+
+
+ 
+
+  /* .container{
+    position: relative;
+    width: 100%;
+    height: 10vh;
+    background: purple;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 30;
+  } */
+
+  .btn{
+    position: absolute;
+    padding: 10px 60px;
+    background: yellow;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    font-size: 22px;
+    font-weight: 500;
+    border-radius: 30px;
+    z-index: 100;
+    top: 100px;
+   left: 30px;
+  }
+
+  .popup{
+    width: 400px;
+    background: #fff;
+    border-radius: 6px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%,50%) scale(0.1);
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #333;
+    visibility: hidden;
+    transition: transform 0.4s, top 0.4s;
+    z-index: 40;
+  }
+
+  .open-popup{
+    visibility: visible;
+    top: 1%;
+    transform: translate(-50%,50%) scale(1);
+  }
+
+  .popup img{
+    width: 100px;
+    margin-top: -50px;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(red,green,blue,alpha);
+  }
+
+  .popup h2{
+    font-size: 38px;
+    font-weight: 500;
+    margin: 30px 0 10px;
+  }
+
+  .popup button{
+    width: 100%;
+    margin-top: 50px;
+    padding: 10px 0;
+    color:  purple;
+    border: 0;
+    outline: none;
+    font-size: 18px;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 5px 5px rgba(red,green,blue,alpha);
+
+  }
+
+
 
 
 
