--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -11,6 +11,10 @@
 
 }
 
+.card:hover {
+    transform: scale(2.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
 .card.strike{
     background-color: yellow;
 
