--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -11,6 +11,7 @@
 }
 
 #boardTwo{
+   
     height: 550px;
     position: relative;
     border: 5px solid red;
@@ -137,19 +138,18 @@
 
 }
 
+#noLead{
+    display: none;
+}
+
+#noFollowUp{
+    display: none;
+}
+
 
  
 
-  /* .container{
-    position: relative;
-    width: 100%;
-    height: 10vh;
-    background: purple;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 30;
-  } */
+ 
 
   .btn{
     position: absolute;
@@ -180,6 +180,7 @@
     visibility: hidden;
     transition: transform 0.4s, top 0.4s;
     z-index: 40;
+    border: 10px solid black;
   }
 
   .open-popup{
