--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -163,10 +163,10 @@
     border-radius: 30px;
     z-index: 100;
     top: 100px;
-   left: 30px;
+    left: 30px;
   }
 
-  .popup{
+  .popup, .flashModal{
     width: 400px;
     background: #fff;
     border-radius: 6px;
@@ -202,7 +202,7 @@
     margin: 30px 0 10px;
   }
 
-  .popup button{
+  .popup button, .flashModal button{
     width: 100%;
     margin-top: 50px;
     padding: 10px 0;
@@ -215,6 +215,8 @@
     box-shadow: 0 5px 5px rgba(red,green,blue,alpha);
 
   }
+
+
 
 
 
