--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -12,7 +12,7 @@ body{
     border: 5px solid black;
     background-color: red;
     width: 970px;
-    background-image: url("./images/MainEventPlaymatt.png");
+    background-image: url("./MainEventPlaymatt.png");
     background-position: center;
     background-size: cover;
 }
@@ -24,7 +24,7 @@ body{
     border: 5px solid red;
     background-color: red;
     width: 970px;
-    background-image: url("./images/MainEventPlaymatt.png");
+    background-image: url("./MainEventPlaymatt.png");
     background-position: center;
     background-size: cover;
 } 
@@ -57,7 +57,7 @@ body{
 
 .deck{
     position: absolute;
-    background-image: url("./images/c54f7956_1.png");
+    background-image: url("/WrestlingCardGame/images/c54f7956_1.png");
     background-position: center;
     background-size: cover;
     top: 150px;
@@ -114,7 +114,7 @@ body{
     border: 5px solid black;
     z-index: 20;
     list-style: none;
-    background-image: url("./images/deckOneArt/00-ElSuperHombreALT-1.png");
+    background-image: url("/WrestlingCardGame/images/deckOneArt/00-ElSuperHombreALT-1.png");
     /* background-position: center; */
     background-position: center;
     background-size: contain;
