--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -37,7 +37,9 @@
 } 
 
 .btn{
-    position: absolute;
+    display: flex;
+    justify-content: left;
+    /* position: absolute; */
     padding: 10px 60px;
     background: yellow;
     border: 0;
@@ -48,7 +50,7 @@
     border-radius: 30px;
     z-index: 100;
     top: 75px;
-   left: 29px;
+   left: 20px;
   }
 
   .popup{
